--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -119,11 +119,18 @@ h4 {
   color: var(--md-default-table-header-text);
 }
 
-/* reduced table row height */
 .md-typeset table:not([class]) td {
   border-top: .05rem solid var(--md-default-fg-color--lightest);
   padding: .2375em 1.25em;
   vertical-align: top;
+}
+
+table {
+  width: 100% !important;
+}
+
+.md-typeset table {
+  width: 100% !important;
 }
 
 /* Tasklist */
