--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -117,20 +117,13 @@ h4 {
   font-weight: bold;
   background-color: #faac02;
   color: var(--md-default-table-header-text);
+  width: 100%;
 }
 
 .md-typeset table:not([class]) td {
   border-top: .05rem solid var(--md-default-fg-color--lightest);
   padding: .2375em 1.25em;
   vertical-align: top;
-}
-
-table {
-  width: 100% !important;
-}
-
-.md-typeset table {
-  width: 100% !important;
 }
 
 /* Tasklist */
